// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxMenu customize 1`] = `
<div>
  <h3
    class="bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`CxMenu example 1`] = `
<div>
  <button
    aria-controls="react-aria-:rd:"
    aria-expanded="true"
    aria-haspopup="true"
    class="button primary caret"
    data-react-aria-pressable="true"
    id="react-aria-:rc:"
    tabindex="0"
    type="button"
  >
    Test
  </button>
  <div
    aria-hidden="false"
    aria-labelledby="react-aria-:rc:"
    class="menu show"
    data-cx-placement="bottom-start"
    id="react-aria-:rd:"
    role="menu"
    style="position: absolute; max-height: 0px; left: 8px; top: 2px;"
  >
    <a
      class="menu-item"
      role="menuitem"
    >
      A
    </a>
    <a
      class="menu-item"
      role="menuitem"
    >
      B
    </a>
  </div>
</div>
`;

exports[`loads and displays CxMenu component 1`] = `
<div>
  Test
</div>
`;
